# ecse437-jobcreator

src/: CMakeLists.txt  main.c
src/include/: config.h  input.h  job.h
src/job/: job.c
src/utils/: input.c
